# docker

api-dev/: dockerfile.dev  pyproject.toml
api-dev/api/: main.py
api-dev/tests/: test_student.py
dev_con/: compose.yaml
dev_con/dev_cont/: .env  Dockerfile.dev  pyproject.toml
dev_con/dev_cont/dev_con/: main.py
dev_con/dev_cont/dev_con/config/: db.py
dev_con/dev_cont/tests/: test_main.py
dev_cont1/: Dockerfile.dev  pyproject.toml
dev_cont1/dev_cont1/: main.py
kafka/: pyproject.toml
kafka-messaging/: create_topic.sh  docker-compose.yaml
kafka-messaging/microservice_01/: .env  Dockerfile.dev  pyproject.toml
kafka-messaging/microservice_01/app/: main.py
kafka-messaging/microservice_01/app/cofig/: db.py
kafka/kafka/: main.py
