[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pytest = "^8.1.1"
httpx = "^0.27.0"

[tool.poetry.scripts]
dev = "api.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
